# shd-casting-website

./: .gitignore  CLAUDE.md  deploy.sh  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 849309e198fe_add_site_config_table.py  a76e6fd2455f_initial_tables.py  e92a49ce158a_add_i18n_fields_to_products_and_.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  admin.py  category.py  inquiry.py  product.py  site_config.py
backend/app/routers/: admin.py  categories.py  inquiries.py  products.py  site_config.py
backend/app/schemas/: auth.py  common.py  inquiry.py  product.py
backend/app/services/: auth.py  email.py
backend/app/utils/: response.py  translator.py
backend/docs/: auth.md  inquiry-api.md  product-api.md  setup.md
backend/tests/: conftest.py  test_auth.py  test_categories.py  test_inquiries.py  test_products.py
docs/: 后端接口文档.md  服务器部署信息.md  素材说明.md  需求说明书.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  pnpm-lock.yaml  vite.config.ts
frontend/src/app/: Root.tsx  routes.tsx
frontend/src/app/components/: Footer.tsx  MobileFloatingBar.tsx  Navbar.tsx
frontend/src/app/pages/: AboutPage.tsx  ContactPage.tsx  HomePage.tsx  ProductsPage.tsx
frontend/src/app/pages/admin/: AdminLayout.tsx  CategoriesPage.tsx  DashboardPage.tsx  InquiriesPage.tsx  LoginPage.tsx  ProductsPage.tsx  (+1 more)
frontend/src/app/utils/: api.ts  useSiteConfig.ts
frontend/src/i18n/: en.json  es.json  index.ts  ru.json  zh.json
